# todo-fastapi-htmx

./: .gitignore  README.md  pyproject.toml
app/: app.py  crud.py  database.py  models.py  schemas.py
app/templates/: actions.html  base.html  index.html  navbar.html  todo.html
